<resources>
    <string name="app_name">TodoWithApi</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Log in</string>
    <string name="create_new_task">create new task</string>
    <string name="see_all_tasks">see all tasks</string>
    <string name="user_name">user name</string>
    <string name="example_email_com">example@email.com</string>
    <string name="password">password</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_in">LOG IN</string>
    <string name="title_activity_create">Post new task</string>
    <string name="create">Create</string>
</resources>
